typescript/checker/tests/conformance/parser/ecmascript5/parser10.1.1-8gs.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
  --> $DIR/tests/conformance/parser/ecmascript5/parser10.1.1-8gs.ts:19:5
   |
19 | var public = 1;
   |     ^^^^^^

